All modals displayed at the top layered when visible, fixes issue #64

--- a/src/main/java/assets/css/AcesUp.css
+++ b/src/main/java/assets/css/AcesUp.css
@@ -196,7 +196,7 @@ moveCardInput{
 .modal {
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 100;
     left: 0;
     top: 0;
     width: 100%;
